--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-oauth/google": "^0.2.6",
+    "@react-oauth/google": "^0.2.8",
     "@sanity/client": "^3.3.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
@@ -17,10 +17,10 @@
     "axios": "^0.27.2",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.4",
+    "jwt-decode": "^3.1.2",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
     "typescript": "4.9.3",
     "uuidv4": "^6.2.13",
