--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.4",
     "@react-oauth/google": "^0.2.8",
     "@sanity/client": "^3.3.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "@uiball/loaders": "^1.2.6",
     "axios": "^0.27.2",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.4",
