--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-config-next": "13.0.4",
     "jwt-decode": "^3.1.2",
     "next": "12.1.6",
+    "next-themes": "^0.2.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
